<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:onClick="cancelar"
        android:text="@string/cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCancelar"
        app:layout_constraintTop_toBottomOf="@+id/tablaDatosContacto" />

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:onClick="guardar"
        android:text="@string/guardar"
        app:layout_constraintEnd_toStartOf="@+id/btnVolver"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablaDatosContacto" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp" />

    <TextView
        android:id="@+id/agregar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_corner_view"
        android:gravity="center"
        android:text="@string/agregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/agregaImagen"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/contact_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agregar"
        android:layout_marginTop="20dp"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"/>

    <TableLayout
        android:id="@+id/tablaDatosContacto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/agregaImagen">

        <TableRow
            android:id="@+id/filaNombre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textViewNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nombre"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editaNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Nombre ej: Juan"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textAlignment="textStart" />

        </TableRow>

        <TableRow
            android:id="@+id/filaTelefono"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textViewTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/telefono"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editaTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Teléfono ej: 675757575"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:textAlignment="textStart" />

        </TableRow>

        <TableRow
            android:id="@+id/filaDireccion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textViewDireccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/direccion"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editaDireccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Dirección ej: C/ Laguna 5"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textAlignment="textStart" />

        </TableRow>

        <TableRow
            android:id="@+id/filaTwitter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textViewTwitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/twitter"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editaTwitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Twitter ej: @MiTwitter"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textAlignment="textStart" />
        </TableRow>

        <TableRow
            android:id="@+id/filaInstagram"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textViewInstagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/instagram"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editaInstagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Instagram ej: @MiInstagram"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textAlignment="textStart" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>