<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp" />

    <TextView
        android:id="@+id/agregar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_corner_view"
        android:gravity="center"
        android:text="@string/agregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/foto_rounded"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agregar"
        tools:ignore="MissingConstraints"
        tools:srcCompat="@tools:sample/avatars" />

    <TableLayout
        android:id="@+id/tablaDatosContacto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/imageButton">

        <TableRow
            android:id="@+id/filaMarca"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textViewNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nombre"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextModelo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Nombre ej: Juan"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textAlignment="textStart" />

        </TableRow>

        <TableRow
            android:id="@+id/filaModelo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textViewModeloFicha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/telefono"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextModelo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Teléfono ej: 675757575"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textAlignment="textStart" />

        </TableRow>

        <TableRow
            android:id="@+id/filaKM"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textViewKMFicha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/direccion"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextKilometraje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Dirección ej: C/ Laguna 5"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textAlignment="textStart" />

        </TableRow>

        <TableRow
            android:id="@+id/filaAnio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textViewAnioFicha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/twitter"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextAnioFicha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Twitter ej: @MiTwitter"
                android:importantForAutofill="no"
                android:inputType="datetime"
                android:textAlignment="textStart" />
        </TableRow>

        <TableRow
            android:id="@+id/filaCilindrada"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textViewCilindradaFicha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/instagram"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextCilindradaFicha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Instagram ej: @MiInstagram"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textAlignment="textStart" />
        </TableRow>

    </TableLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:text="@string/cancelar"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="488dp" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:text="@string/guardar"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="488dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>