<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#7ADDAF"
        android:gravity="center|start"
        android:paddingLeft="20dp"
        android:text="@string/titulo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/misContactos"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner_view"
        android:gravity="center"
        android:text="@string/misContactos"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/misContactos">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerBusqueda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false" />
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_baseline_add_24"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/anadirFloatting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#F18A8A"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:fabSize="normal"
        android:text="@string/anadir"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/add_fab"
        app:layout_constraintEnd_toEndOf="@+id/add_fab"
        app:layout_constraintStart_toStartOf="@+id/add_fab"
        android:visibility="invisible"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/buscarFloatting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#F18A8A"
        android:textColor="@color/white"
        android:gravity="center"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/buscar"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="@id/add_fab"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/add_fab" />


</androidx.constraintlayout.widget.ConstraintLayout>